fix mobile menu's spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -8,7 +8,6 @@ header {
   }
 
   .menu {
-    margin: 0 0 0 -15px;
     width: calc(100% + 30px);
 
     @media (min-width: $mobile-breakpoint-width) {
